rc.local permissions

--- a/ubuntu/CMakeLists.txt
+++ b/ubuntu/CMakeLists.txt
@@ -8,7 +8,11 @@ set(CPACK_PACKAGE_VERSION_MINOR "2")
 set(CPACK_PACKAGE_VERSION_PATCH "2")
 set(USERNAME "rborisov")
 
-install(FILES "${PROJECT_SOURCE_DIR}/rc.local" DESTINATION "/etc")
+install(FILES "${PROJECT_SOURCE_DIR}/rc.local" 
+    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
+                GROUP_EXECUTE GROUP_READ
+                WORLD_EXECUTE WORLD_READ
+    DESTINATION "/etc")
 install(FILES "${PROJECT_SOURCE_DIR}/../mpd/src/mpd" 
 	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
 		    GROUP_EXECUTE GROUP_READ
